<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManageDbActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <Button

            android:id="@+id/importDb_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/importer_une_base_de_donn_e"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="16dp" />

        <Button

            android:id="@+id/exportDb_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exporter_la_base_de_donn_e"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="16dp" />

        <Button
            android:id="@+id/deleteDb_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reinitialiser_la_base_de_donn_e" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>