<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditActivity">

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Référence"
            android:textAppearance="@android:style/TextAppearance.Large"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="61dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edit_ref"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/entrez_lareference"
                android:inputType="textCapCharacters"
                android:text=""
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                tools:layout_editor_absoluteX="166dp"
                tools:layout_editor_absoluteY="61dp" />

            <Button
                android:id="@+id/scan_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/scan"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        </LinearLayout>

        <TextView
            android:id="@+id/empalcement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Emplacement"
            android:textAppearance="@android:style/TextAppearance.Large"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="61dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edit_emp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="Entrez l'emplacement"
                android:inputType="textCapCharacters"
                android:text=""
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                tools:layout_editor_absoluteX="166dp"
                tools:layout_editor_absoluteY="61dp" />

            <Button
                android:id="@+id/scan_emp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/scan"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        </LinearLayout>


        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stock"
            android:textAppearance="@android:style/TextAppearance.Large"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="137dp" />

        <EditText
            android:id="@+id/edit_stock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/entrez_le_stock"
            android:inputType="number"

            android:text=""
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            tools:layout_editor_absoluteX="166dp"
            tools:layout_editor_absoluteY="137dp" />


        <Button
            android:id="@+id/add_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ajouter"
            android:textAppearance="@android:style/TextAppearance.Large"
            tools:layout_editor_absoluteX="147dp"
            tools:layout_editor_absoluteY="335dp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>